--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>$(NoWarn);NU1608;NU1605</NoWarn>
 
     <!-- Code quality -->
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
