APIs for device manager

--- a/src/DeviceManager/SignalBeam.DeviceManager.Host/SignalBeam.DeviceManager.Host.csproj
+++ b/src/DeviceManager/SignalBeam.DeviceManager.Host/SignalBeam.DeviceManager.Host.csproj
@@ -9,9 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Scalar.AspNetCore" />
-    <PackageReference Include="WolverineFx" />
-    <PackageReference Include="WolverineFx.Http" />
     <PackageReference Include="Serilog.AspNetCore" />
   </ItemGroup>
 
