--- a/src/DeviceManager/SignalBeam.DeviceManager.Host/appsettings.json
+++ b/src/DeviceManager/SignalBeam.DeviceManager.Host/appsettings.json
@@ -10,6 +10,20 @@
   "ConnectionStrings": {
     "DeviceDb": "Host=localhost;Database=signalbeam;Username=postgres;Password=postgres"
   },
+  "NATS": {
+    "Url": "nats://localhost:4222"
+  },
+  "Authentication": {
+    "Jwt": {
+      "Authority": "https://login.microsoftonline.com/your-tenant-id/v2.0",
+      "Audience": "api://signalbeam-device-manager",
+      "RequireHttpsMetadata": false
+    },
+    "ApiKeys": [
+      "00000000-0000-0000-0000-000000000001:dev-api-key-1:devices:read,devices:write",
+      "00000000-0000-0000-0000-000000000002:dev-api-key-2:devices:read"
+    ]
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
