--- a/src/EdgeAgent/SignalBeam.EdgeAgent.Host/SignalBeam.EdgeAgent.Host.csproj
+++ b/src/EdgeAgent/SignalBeam.EdgeAgent.Host/SignalBeam.EdgeAgent.Host.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog.Sinks.Console" />
     <PackageReference Include="Serilog.Sinks.File" />
     <PackageReference Include="WolverineFx" />
+    <PackageReference Include="System.CommandLine" />
   </ItemGroup>
 
   <ItemGroup>
