--- a/src/BundleOrchestrator/SignalBeam.BundleOrchestrator.Host/appsettings.Development.json
+++ b/src/BundleOrchestrator/SignalBeam.BundleOrchestrator.Host/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "Authentication": {
+    "ApiKeys": [
+      "default-tenant:dev-api-key-12345:bundles.read,bundles.write",
+      "tenant-001:test-api-key-67890:bundles.read"
+    ]
   }
 }
