implement simple edge simulator

--- a/src/SignalBeam.AppHost/SignalBeam.AppHost.csproj
+++ b/src/SignalBeam.AppHost/SignalBeam.AppHost.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\DeviceManager\SignalBeam.DeviceManager.Host\SignalBeam.DeviceManager.Host.csproj" />
     <ProjectReference Include="..\BundleOrchestrator\SignalBeam.BundleOrchestrator.Host\SignalBeam.BundleOrchestrator.Host.csproj" />
     <ProjectReference Include="..\TelemetryProcessor\SignalBeam.TelemetryProcessor.Host\SignalBeam.TelemetryProcessor.Host.csproj" />
+    <ProjectReference Include="..\EdgeAgent\SignalBeam.EdgeAgent.Simulator\SignalBeam.EdgeAgent.Simulator.csproj" />
   </ItemGroup>
 
 </Project>
