auth login msal and xapi

--- a/src/BundleOrchestrator/SignalBeam.BundleOrchestrator.Host/appsettings.Development.json
+++ b/src/BundleOrchestrator/SignalBeam.BundleOrchestrator.Host/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "Authentication": {
     "ApiKeys": [
-      "default-tenant:dev-api-key-12345:bundles.read,bundles.write",
-      "tenant-001:test-api-key-67890:bundles.read"
+      "00000000-0000-0000-0000-000000000001:dev-api-key-1:bundles:read,bundles:write",
+      "00000000-0000-0000-0000-000000000002:dev-api-key-2:bundles:read"
     ]
   }
 }
