--- a/src/BundleOrchestrator/SignalBeam.BundleOrchestrator.Host/appsettings.json
+++ b/src/BundleOrchestrator/SignalBeam.BundleOrchestrator.Host/appsettings.json
@@ -15,7 +15,11 @@
       "Authority": "https://login.microsoftonline.com/your-tenant-id/v2.0",
       "Audience": "api://signalbeam-api",
       "RequireHttpsMetadata": true
-    }
+    },
+    "ApiKeys": [
+      "00000000-0000-0000-0000-000000000001:dev-api-key-1:bundles:read,bundles:write",
+      "00000000-0000-0000-0000-000000000002:dev-api-key-2:bundles:read"
+    ]
   },
   "AzureBlobStorage": {
     "ServiceUri": "https://signalbeam.blob.core.windows.net",
