--- a/src/SignalBeam.AppHost/SignalBeam.AppHost.csproj
+++ b/src/SignalBeam.AppHost/SignalBeam.AppHost.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SignalBeam.ApiGateway\SignalBeam.ApiGateway.csproj" />
     <ProjectReference Include="..\DeviceManager\SignalBeam.DeviceManager.Host\SignalBeam.DeviceManager.Host.csproj" />
     <ProjectReference Include="..\BundleOrchestrator\SignalBeam.BundleOrchestrator.Host\SignalBeam.BundleOrchestrator.Host.csproj" />
     <ProjectReference Include="..\TelemetryProcessor\SignalBeam.TelemetryProcessor.Host\SignalBeam.TelemetryProcessor.Host.csproj" />
