--- a/web/.env.development
+++ b/web/.env.development
@@ -1,4 +1,9 @@
 # Development Environment Variables
-VITE_API_URL=http://localhost:5296
+# API Gateway (YARP) - routes to all microservices
+VITE_API_URL=http://localhost:8080
 VITE_APP_ENV=development
 VITE_ENABLE_DEVTOOLS=true
+
+# Tenant ID for development (MVP uses a single tenant)
+# In production, this would come from authentication context
+VITE_TENANT_ID=00000000-0000-0000-0000-000000000001
