--- a/.github/workflows/build-edge-agent.yml
+++ b/.github/workflows/build-edge-agent.yml
@@ -176,7 +176,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./src/EdgeAgent
+          context: .
           file: ./src/EdgeAgent/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
