add reconcilate containers on the agent

--- a/src/EdgeAgent/SignalBeam.EdgeAgent.Host/appsettings.json
+++ b/src/EdgeAgent/SignalBeam.EdgeAgent.Host/appsettings.json
@@ -3,6 +3,9 @@
     "CloudUrl": "https://api.signalbeam.com",
     "HeartbeatIntervalSeconds": 30,
     "ReconciliationIntervalSeconds": 60,
+    "ReconciliationRetryAttempts": 3,
+    "ReconciliationRetryDelaySeconds": 10,
+    "ImagePullTimeoutSeconds": 300,
     "MaxRetries": 3,
     "LogFilePath": "/var/log/signalbeam-agent/agent.log"
   },
