--- a/tests/SignalBeam.BundleOrchestrator.Tests.Unit/SignalBeam.BundleOrchestrator.Tests.Unit.csproj
+++ b/tests/SignalBeam.BundleOrchestrator.Tests.Unit/SignalBeam.BundleOrchestrator.Tests.Unit.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\BundleOrchestrator\SignalBeam.BundleOrchestrator.Application\SignalBeam.BundleOrchestrator.Application.csproj" />
+    <ProjectReference Include="..\..\src\BundleOrchestrator\SignalBeam.BundleOrchestrator.Host\SignalBeam.BundleOrchestrator.Host.csproj" />
+    <ProjectReference Include="..\..\src\BundleOrchestrator\SignalBeam.BundleOrchestrator.Infrastructure\SignalBeam.BundleOrchestrator.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\Shared\SignalBeam.Domain\SignalBeam.Domain.csproj" />
   </ItemGroup>
 
