feat: rollout management and differentiate between simple and phased rollouts.

--- a/src/SignalBeam.ApiGateway/appsettings.json
+++ b/src/SignalBeam.ApiGateway/appsettings.json
@@ -40,6 +40,12 @@
           "Path": "/api/rollouts/{**catch-all}"
         }
       },
+      "phased-rollouts-route": {
+        "ClusterId": "bundle-orchestrator",
+        "Match": {
+          "Path": "/api/phased-rollouts/{**catch-all}"
+        }
+      },
       "heartbeat-route": {
         "ClusterId": "telemetry-processor",
         "Match": {
