--- a/src/DeviceManager/SignalBeam.DeviceManager.Host/appsettings.json
+++ b/src/DeviceManager/SignalBeam.DeviceManager.Host/appsettings.json
@@ -13,6 +13,11 @@
   "NATS": {
     "Url": "nats://localhost:4222"
   },
+  "ApiKeyExpirationCheck": {
+    "Enabled": true,
+    "CheckIntervalHours": 24,
+    "WarningThresholdDays": 7
+  },
   "Authentication": {
     "Jwt": {
       "Authority": "https://login.microsoftonline.com/your-tenant-id/v2.0",
