--- a/src/EdgeAgent/SignalBeam.EdgeAgent.Host/appsettings.json
+++ b/src/EdgeAgent/SignalBeam.EdgeAgent.Host/appsettings.json
@@ -1,13 +1,15 @@
 {
   "Agent": {
     "CloudUrl": "https://api.signalbeam.com",
+    "CredentialsDirectory": "/var/lib/signalbeam-agent",
     "HeartbeatIntervalSeconds": 30,
     "ReconciliationIntervalSeconds": 60,
     "ReconciliationRetryAttempts": 3,
     "ReconciliationRetryDelaySeconds": 10,
     "ImagePullTimeoutSeconds": 300,
     "MaxRetries": 3,
-    "LogFilePath": "/var/log/signalbeam-agent/agent.log"
+    "LogFilePath": "/var/log/signalbeam-agent/agent.log",
+    "RegistrationStatusCheckIntervalSeconds": 300
   },
   "Serilog": {
     "MinimumLevel": {
