alerting and notification for devices implementation

--- a/src/TelemetryProcessor/SignalBeam.TelemetryProcessor.Host/appsettings.json
+++ b/src/TelemetryProcessor/SignalBeam.TelemetryProcessor.Host/appsettings.json
@@ -32,6 +32,89 @@
   "MetricsAggregation": {
     "AggregationInterval": "00:05:00"
   },
+  "HealthMonitor": {
+    "Enabled": true,
+    "CheckInterval": "00:00:30",
+    "BatchSize": 100
+  },
+  "AlertManager": {
+    "Enabled": true,
+    "CheckInterval": "00:01:00"
+  },
+  "Alerting": {
+    "Rules": {
+      "DeviceOfflineWarning": {
+        "Enabled": true,
+        "ThresholdMinutes": 5,
+        "Severity": "Warning"
+      },
+      "DeviceOfflineCritical": {
+        "Enabled": true,
+        "ThresholdMinutes": 30,
+        "Severity": "Critical"
+      },
+      "DeviceUnhealthy": {
+        "Enabled": true,
+        "ThresholdScore": 50,
+        "Severity": "Critical"
+      },
+      "HighErrorRate": {
+        "Enabled": true,
+        "ThresholdPercent": 5.0,
+        "WindowMinutes": 5,
+        "Severity": "Warning"
+      }
+    }
+  },
+  "NotificationDispatcher": {
+    "Enabled": true,
+    "CheckInterval": "00:00:30"
+  },
+  "NotificationRetry": {
+    "Enabled": true,
+    "CheckInterval": "00:05:00",
+    "MaxRetryAttempts": 3,
+    "RetryBackoffBase": "00:05:00"
+  },
+  "Notifications": {
+    "Enabled": false,
+    "MaxRetryAttempts": 3,
+    "RetryDelay": "00:05:00",
+    "Channels": {
+      "Email": {
+        "Enabled": false,
+        "SmtpServer": "smtp.gmail.com",
+        "SmtpPort": 587,
+        "UseSsl": true,
+        "Username": "",
+        "Password": "",
+        "FromAddress": "alerts@signalbeam.io",
+        "FromName": "SignalBeam Alerts",
+        "DefaultRecipients": []
+      },
+      "Slack": {
+        "Enabled": false,
+        "WebhookUrl": "",
+        "Channel": "#alerts",
+        "BotName": "SignalBeam",
+        "IconEmoji": ":warning:"
+      },
+      "Teams": {
+        "Enabled": false,
+        "WebhookUrl": ""
+      },
+      "PagerDuty": {
+        "Enabled": false,
+        "IntegrationKey": "",
+        "ApiUrl": "https://events.pagerduty.com/v2/enqueue"
+      }
+    },
+    "Routing": {
+      "InfoChannels": ["Email"],
+      "WarningChannels": ["Email", "Slack"],
+      "CriticalChannels": ["Email", "Slack", "Teams", "PagerDuty"]
+    }
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console"
