backend and frontend implementations

--- a/src/SignalBeam.ApiGateway/appsettings.json
+++ b/src/SignalBeam.ApiGateway/appsettings.json
@@ -28,6 +28,12 @@
           "Path": "/api/groups/{**catch-all}"
         }
       },
+      "registration-tokens-route": {
+        "ClusterId": "device-manager",
+        "Match": {
+          "Path": "/api/registration-tokens/{**catch-all}"
+        }
+      },
       "bundles-route": {
         "ClusterId": "bundle-orchestrator",
         "Match": {
