tenant and user management and initial backend implementation

--- a/src/DeviceManager/SignalBeam.DeviceManager.Host/appsettings.json
+++ b/src/DeviceManager/SignalBeam.DeviceManager.Host/appsettings.json
@@ -13,6 +13,9 @@
   "NATS": {
     "Url": "nats://localhost:4222"
   },
+  "IdentityManager": {
+    "BaseUrl": "http://localhost:5004"
+  },
   "ApiKeyExpirationCheck": {
     "Enabled": true,
     "CheckIntervalHours": 24,
