--- a/src/SignalBeam.ApiGateway/appsettings.json
+++ b/src/SignalBeam.ApiGateway/appsettings.json
@@ -57,6 +57,42 @@
         "Match": {
           "Path": "/api/heartbeat/{**catch-all}"
         }
+      },
+      "auth-route": {
+        "ClusterId": "identity-manager",
+        "Match": {
+          "Path": "/api/auth/{**catch-all}"
+        }
+      },
+      "subscriptions-route": {
+        "ClusterId": "identity-manager",
+        "Match": {
+          "Path": "/api/subscriptions/{**catch-all}"
+        }
+      },
+      "oidc-wellknown-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/.well-known/{**catch-all}"
+        }
+      },
+      "oidc-oauth-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/oauth/{**catch-all}"
+        }
+      },
+      "oidc-authorize-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/authorize"
+        }
+      },
+      "oidc-token-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/oauth/v2/token"
+        }
       }
     },
     "Clusters": {
@@ -78,6 +114,20 @@
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:5003"
+          }
+        }
+      },
+      "identity-manager": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:5004"
+          }
+        }
+      },
+      "zitadel": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:9080"
           }
         }
       }
