--- a/tests/SignalBeam.DeviceManager.Tests.Integration/SignalBeam.DeviceManager.Tests.Integration.csproj
+++ b/tests/SignalBeam.DeviceManager.Tests.Integration/SignalBeam.DeviceManager.Tests.Integration.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
     <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="NSubstitute" />
     <PackageReference Include="Testcontainers.PostgreSql" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
   </ItemGroup>
