--- a/web/.env.development
+++ b/web/.env.development
@@ -4,6 +4,19 @@ VITE_API_URL=http://localhost:8080
 VITE_APP_ENV=development
 VITE_ENABLE_DEVTOOLS=true
 
-# Tenant ID for development (MVP uses a single tenant)
-# In production, this would come from authentication context
-VITE_TENANT_ID=00000000-0000-0000-0000-000000000001
+# Authentication Mode (Zitadel is default for production-ready multi-tenant auth)
+# Options: 'zitadel', 'entra', 'apiKey'
+VITE_AUTH_MODE=zitadel
+
+# Zitadel Configuration (Local Development)
+# Using API Gateway as proxy to Zitadel
+VITE_ZITADEL_AUTHORITY=http://localhost:8080
+VITE_ZITADEL_CLIENT_ID=your-client-id
+VITE_ZITADEL_REDIRECT_URI=http://localhost:5173/callback
+VITE_ZITADEL_POST_LOGOUT_REDIRECT_URI=http://localhost:5173
+
+# Alternative: Direct connection to Zitadel (bypass API Gateway)
+# VITE_ZITADEL_AUTHORITY=http://localhost:8080
+
+# Legacy: Tenant ID for MVP (deprecated - now comes from authentication)
+# VITE_TENANT_ID=00000000-0000-0000-0000-000000000001
