--- a/web/.env.example
+++ b/web/.env.example
@@ -4,5 +4,25 @@ VITE_API_URL=http://localhost:8080
 # Environment
 VITE_APP_ENV=development
 
+# Authentication Mode
+# Options: 'zitadel', 'entra', 'apiKey'
+VITE_AUTH_MODE=zitadel
+
+# Zitadel Configuration (for AUTH_MODE=zitadel)
+# IMPORTANT: Use API Gateway URL, NOT direct Zitadel URL!
+# Local: API Gateway (port 8080) proxies to Zitadel (port 9080)
+# Production: API Gateway proxies to hosted Zitadel
+VITE_ZITADEL_AUTHORITY=http://localhost:8080
+VITE_ZITADEL_CLIENT_ID=your-client-id
+VITE_ZITADEL_REDIRECT_URI=http://localhost:5173/callback
+VITE_ZITADEL_POST_LOGOUT_REDIRECT_URI=http://localhost:5173
+
+# Entra ID Configuration (for AUTH_MODE=entra, legacy)
+# VITE_ENTRA_CLIENT_ID=
+# VITE_ENTRA_AUTHORITY=
+# VITE_ENTRA_REDIRECT_URI=http://localhost:5173/login
+# VITE_ENTRA_POST_LOGOUT_REDIRECT_URI=http://localhost:5173
+# VITE_ENTRA_SCOPES=openid,profile,email
+
 # Feature Flags
 VITE_ENABLE_DEVTOOLS=true
