login with zitadel

--- a/src/IdentityManager/SignalBeam.IdentityManager.Host/appsettings.json
+++ b/src/IdentityManager/SignalBeam.IdentityManager.Host/appsettings.json
@@ -23,7 +23,7 @@
   "Authentication": {
     "Jwt": {
       "Authority": "http://localhost:8080",
-      "Audience": "api://signalbeam-api",
+      "Audience": "354831099618252549",
       "RequireHttpsMetadata": false
     }
   },
