--- a/src/SignalBeam.ApiGateway/appsettings.json
+++ b/src/SignalBeam.ApiGateway/appsettings.json
@@ -82,6 +82,12 @@
           "Path": "/oauth/{**catch-all}"
         }
       },
+      "oidc-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/oidc/{**catch-all}"
+        }
+      },
       "oidc-authorize-route": {
         "ClusterId": "zitadel",
         "Match": {
@@ -92,6 +98,24 @@
         "ClusterId": "zitadel",
         "Match": {
           "Path": "/oauth/v2/token"
+        }
+      },
+      "zitadel-ui-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/ui/{**catch-all}"
+        }
+      },
+      "zitadel-assets-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/assets/{**catch-all}"
+        }
+      },
+      "zitadel-v2-route": {
+        "ClusterId": "zitadel",
+        "Match": {
+          "Path": "/v2/{**catch-all}"
         }
       }
     },
