fix  bad auth routing and redirect callback

--- a/src/SignalBeam.ApiGateway/appsettings.json
+++ b/src/SignalBeam.ApiGateway/appsettings.json
@@ -123,28 +123,28 @@
       "device-manager": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:5296"
+            "Address": "http://device-manager"
           }
         }
       },
       "bundle-orchestrator": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:5002"
+            "Address": "http://bundle-orchestrator"
           }
         }
       },
       "telemetry-processor": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:5003"
+            "Address": "http://telemetry-processor"
           }
         }
       },
       "identity-manager": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:5004"
+            "Address": "http://identity-manager"
           }
         }
       },
