Few changes to resolve migration issues on startup

--- a/src/SignalBeam.ApiGateway/appsettings.json
+++ b/src/SignalBeam.ApiGateway/appsettings.json
@@ -22,6 +22,24 @@
           "Path": "/api/devices/{**catch-all}"
         }
       },
+      "registration-tokens-route": {
+        "ClusterId": "device-manager",
+        "Match": {
+          "Path": "/api/registration-tokens/{**catch-all}"
+        }
+      },
+      "authentication-logs-route": {
+        "ClusterId": "device-manager",
+        "Match": {
+          "Path": "/api/authentication-logs/{**catch-all}"
+        }
+      },
+      "certificates-route": {
+        "ClusterId": "device-manager",
+        "Match": {
+          "Path": "/api/certificates/{**catch-all}"
+        }
+      },
       "groups-route": {
         "ClusterId": "device-manager",
         "Match": {
